# sericea_shelterbelt

./: README.md
ansible/: playbook.yml
ansible/files/: TEMPLATE.service  TEMPLATE_daemon  configure_packages.sh  gate.service  gate_daemon  kb.template  kb_daemon
morphology/template/: Cargo.toml
morphology/template/src/: main.rs
terraform/: main.tf  outputs.tf
