[package]
name = "TEMPLATE"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.13", features = ["rustls", "rustls-0_23"] }
rustls = { version = "0.23", features = [ "prefer-post-quantum" ] }
rustls-webpki = { version = "0.102.8", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
aws-lc-rs = "1.16"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"
notify = "8"
tokio = { version = "1.49.0", features = ["time", "rt", "macros"] }
actix-files = "0.6.10"
actix-web-lab = "0.25.0"
